// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-icon> Component basic usage 1`] = `
<bolt-icon name="add-open"
           size="medium"
           color="teal"
           background="square"
>
  <span class="c-bolt-icon c-bolt-icon--add-open c-bolt-icon--medium c-bolt-icon--teal has-background has-square-background">
    <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
         xmlns="http://www.w3.org/2000/svg"
         viewbox="0 0 24 24"
    >
      <g fill="none"
         fill-rule="evenodd"
      >
        <path>
        </path>
        <g fill="var(--bolt-icon-primary-color)">
          <path d="M12 21c-4.962 0-9-4.038-9-9s4.038-9 9-9 9 4.038 9 9-4.038 9-9 9m0-20C5.937 1 1 5.938 1 12s4.938 11 11 11 11-4.938 11-11S18.062 1 12 1">
          </path>
          <path d="M16 11h-3V8c0-.55-.45-1-1-1s-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1">
          </path>
        </g>
      </g>
    </svg>
    <span class="c-bolt-icon__background-shape c-bolt-icon__background-shape--square">
    </span>
  </span>
</bolt-icon>
`;

exports[`<bolt-icon> Component basic usage with attributes 1`] = `
<bolt-icon style="--bolt-theme-icon-background: #e64b18; --bolt-theme-icon: #FFF; --bolt-theme-icon-background-opacity: 1;"
           name="add-open"
           size="medium"
           color="teal"
           background="square"
>
  <span class="c-bolt-icon c-bolt-icon--add-open c-bolt-icon--medium c-bolt-icon--teal has-background has-square-background">
    <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
         xmlns="http://www.w3.org/2000/svg"
         viewbox="0 0 24 24"
    >
      <g fill="none"
         fill-rule="evenodd"
      >
        <path>
        </path>
        <g fill="var(--bolt-icon-primary-color)">
          <path d="M12 21c-4.962 0-9-4.038-9-9s4.038-9 9-9 9 4.038 9 9-4.038 9-9 9m0-20C5.937 1 1 5.938 1 12s4.938 11 11 11 11-4.938 11-11S18.062 1 12 1">
          </path>
          <path d="M16 11h-3V8c0-.55-.45-1-1-1s-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1">
          </path>
        </g>
      </g>
    </svg>
    <span class="c-bolt-icon__background-shape c-bolt-icon__background-shape--square">
    </span>
  </span>
</bolt-icon>
`;
